# tracker-care-of

./: .dockerignore  .env.example  .gitattributes  .gitignore  API_ROADMAP.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yaml  env-parser.cpp  env-parser.h  launch.vs.json  main.cpp  plan.md  postgre-create-tables.sql  postgre-db.cpp  postgre-db.h  start-apps.ps1  tracker-care-of.cpp  tracker-care-of.slnx  tracker-care-of.vcxproj  tracker-care-of.vcxproj.filters  vcpkg.json
.claude/: settings.local.json
apps/api/: dynamic_config_vars.yaml  secdist.json  static_config.yaml  swagger.json
apps/api/dto/: anamnesis-dto.h  auth-dto.h  patient-dto.h  water-dto.h
apps/api/include/: api-server.h  component-list.hpp  config.h
apps/api/include/components/: session-store-component.hpp
apps/api/include/controllers/: anamnesis-controller.h  auth-controller.h  patient-controller.h  swagger-controller.h  water-controller.h
apps/api/include/handlers/: anamnesis-by-id-handler.hpp  anamnesis-list-handler.hpp  auth-handler.hpp  authenticated-handler.hpp  http-helpers.hpp  patient-anamnesis-handler.hpp  patient-by-id-handler.hpp  patient-list-handler.hpp  patient-water-handler.hpp  water-by-id-handler.hpp  water-frequency-handler.hpp  water-list-handler.hpp
apps/api/include/middleware/: auth-middleware.h
apps/api/src/: api-server.cpp  component-list.cpp  config.cpp  main.cpp
apps/api/src/components/: session-store-component.cpp
apps/api/src/controllers/: anamnesis-controller.cpp  auth-controller.cpp  patient-controller.cpp  swagger-controller.cpp  water-controller.cpp
apps/api/src/handlers/: anamnesis-by-id-handler.cpp  anamnesis-list-handler.cpp  auth-handler.cpp  authenticated-handler.cpp  patient-anamnesis-handler.cpp  patient-by-id-handler.cpp  patient-list-handler.cpp  patient-water-handler.cpp  water-by-id-handler.cpp  water-frequency-handler.cpp  water-list-handler.cpp
apps/api/src/middleware/: auth-middleware.cpp
apps/cli/include/: add-anamnesis-ui.h  add-patient-ui.h  anamnesis-table-row.h  api-client.h  auth-handler.h  console-utf8.h  console-utils.h  date-utils.h  interactive-table.h  interactive-table.inl  patient-table-loader.h  show-anamnesis-ui.h  ui-common.h
apps/cli/src/: add-anamnesis-ui.cpp  add-patient-ui.cpp  api-client.cpp  auth-handler.cpp  console-utils.cpp  date-utils.cpp  main.cpp  patient-table-loader.cpp  show-anamnesis-ui.cpp
apps/cli/tests/: test_pure_logic.cpp
db/: postgre-create-tables.sql  postgre-db.cpp  postgre-db.h
include/: ui-common.h
include/crypto/: password-hasher.cpp
infra/migrations/: apply_migrations.sh  postgres-create-tables.sql
libs/common/include/tracker_common/: env-parser.h  http-responses.h
libs/common/src/: env-parser.cpp
libs/core/include/tracker/models/: anamnesis.h  patient.h  water.h
libs/core/include/tracker/usecases/: auth-service.h
libs/core/src/models/: patient.cpp
libs/core/src/usecases/: auth-service.cpp
libs/crypto/include/tracker_crypto/: password-hasher.h
libs/crypto/src/: password-hasher.cpp
libs/db/include/tracker_db/: db-utils.h  postgres-db.h
libs/db/include/tracker_db/repositories/: anamnesis-repository.h  patient-repository.h  user-repository.h  water-repository.h
libs/db/include/tracker_db/usecases/: auth-service.h
libs/db/migrations/: 001_init_schema.sql  002_add_water_indexes.sql  003_water_frequency_unique.sql  apply_migrations.sh
libs/db/src/: postgres-db.cpp
libs/db/src/repositories/: anamnesis-repository.cpp  patient-repository.cpp  user-repository.cpp  water-repository.cpp
libs/db/src/usecases/: auth-service.cpp
libs/session/include/tracker_session/: cookie.h  redis-session-store.h  secure-random.h  session-store.h
libs/session/src/: cookie.cpp  redis-session-store.cpp  secure-random.cpp
models/: patient.cpp  patient.h  user.h  water.h
repositories/: anamnesis-repository.cpp  anamnesis-repository.h  patient-repository.cpp  patient-repository.h  user-repository.cpp  user-repository.h  water-repository.cpp  water-repository.h
services/: auth-service.cpp
telegram-bot/: go.mod
telegram-bot/cmd/bot/: main.go
telegram-bot/internal/bot/: bot.go  errors.go  handlers.go  middleware.go
tests/: README.md  conftest.py  pytest.ini  requirements.txt  test_anamnesis.py  test_auth.py  test_patients.py  test_static_config.py  test_water.py  test_water_frequency.py
tests/__pycache__/: test_auth.cpython-313-pytest-9.0.3.pyc.17872
tracker-care-of/Debug/: tracker-care-of.exe.recipe  tracker-care-of.ilk  tracker-care-of.vcxproj.FileListAbsolute.txt
ui/: add-anamnesis-ui.cpp  add-patient-ui.cpp  console-utils.cpp  console-utils.h  interactive-table.h  interactive-table.inl  show-anamnesis-ui.cpp  show-anamnesis-ui.h  ui-common.h
